# hf-ai

./: .env.example  .gitignore  README.md  analytics.py  engine.py  narrator.py  pyproject.toml
config/: engine.yaml  india_thresholds.yaml  moat_idf.json  us_thresholds.yaml
core/: aggregator.py  backtest.py  config.py  data_bus.py  engine_base.py  engine_registry.py  monitor.py  result_store.py  risk_engine.py  screen_store.py  write_engine.py
data/: fetcher_india.py  fetcher_us.py  market_config.py  models.py
db/: client.py
doc/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  DB_SCHEMA.md  PHASES.md  REQUIREMENTS.md
news/: scraper.py  sentiment.py  sources.py
scripts/: build_moat_idf.py  sp100_backtest.py
signals/: earnings_quality.py  fundamental.py  insider_sentiment.py  institutional_flow.py  macro_context.py  news_sentiment.py  technical.py  valuation.py
signals/screens/: __init__.py  ackman.py  buffett.py  burry.py  damodaran.py  druckenmiller.py  fisher.py  graham.py  jhunjhunwala.py  lynch.py  munger.py  pabrai.py  taleb.py  wood.py
tests/: conftest.py
tests/fixtures/: sample_financials.json  sample_prices.json  sample_ratios.json
tests/integration/: test_db_connection.py  test_no_lookahead.py  test_phase3_engines.py
tests/unit/: test_aggregator.py  test_analytics.py  test_backtest.py  test_config.py  test_data_bus.py  test_earnings_quality.py  test_fundamental.py  test_india_data.py  test_macro.py  test_news.py  test_registry.py  test_risk_engine.py  test_screens.py  test_technical.py  test_valuation.py
