[tool.poetry]
name = "hf-ai"
version = "0.1.0"
description = "HF-AI Engine — Quantitative trading signal engine for US and India markets"
authors = ["navika"]
python = "^3.11"

[tool.poetry.dependencies]
# Core — always required
python         = "^3.11"
yfinance       = "^0.2"
pandas         = "^2.1"
numpy          = "^1.24"
scipy          = "^1.11"
pydantic       = "^2.4"
pymongo        = "^4.6"
requests       = "^2.31"
beautifulsoup4 = "^4.12"
feedparser     = "^6.0"
pdfplumber     = "^0.10"
pyyaml         = "^6.0"
python-dotenv  = "^1.0"
watchdog       = "^3.0"
schedule       = "^1.2"
tabulate       = "^0.9"
colorama       = "^0.4"
tqdm           = "^4.66"
lxml           = "^4.9"

# News sentiment (FinBERT) — ~500 MB one-time download
transformers   = "^4.40"
torch          = {version = "^2.2", extras = ["cpu"]}

[tool.poetry.dev-dependencies]
pytest         = "^8.0"
pytest-mock    = "^3.12"

[tool.pytest.ini_options]
testpaths      = ["tests"]
markers        = ["integration: requires live MongoDB and network"]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
